Обновлён функционал и валидация
